# zkp-auth

./: Cargo.toml  Dockerfile.client  Dockerfile.server  README.md  build.rs  docker-compose.yml
proto/: zkp.proto
src/: client.rs  main.rs  server.rs  zkp_auth.rs
