[package]
name = "zkp-auth"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = {version = "1", features = ["macros", "rt-multi-thread"]}
dotenv = "0.15.0"
tonic = "0.9.2"
prost = "0.11.9"
futures = "0.3"
curve25519-dalek = "3.1.0"
rand = "0.8"
num-bigint = {version = "0.4.6", features = ["rand"]}
num-traits = "0.2.19"
num-prime = "0.4.4"
is_prime = "2.0.9"
num-primes = "0.3.0"

[dependencies.mongodb]
version = "2.2.0"

[build-dependencies]
tonic-build = "0.9.2"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"
